add support for 1.20.4-1.21