@@ -81,7 +81,7 @@ public class CrashClaim extends JavaPlugin {
 
     @Override
     public void onEnable() {
-        List<String> supportedVersions = Arrays.asList("1.20.6"); //order from min to max
+        List<String> supportedVersions = Arrays.asList("1.20.4", "1.20.5", "1.20.6", "1.21"); //order from min to max
         if (!isServerSupported(supportedVersions)) {
             getServer().getPluginManager().disablePlugin(this);
             return;
@@ -213,15 +213,15 @@ public class CrashClaim extends JavaPlugin {
 
         String minecraftVersion = Bukkit.getMinecraftVersion();
         int minecraftVersionInt = versionStringToInt(minecraftVersion);
-        int minSupportedVersionInt = versionStringToInt(supportedVersions.getFirst());
-        int maxSupportedVersionInt = versionStringToInt(supportedVersions.getLast());
+        int minSupportedVersionInt = versionStringToInt(supportedVersions.get(0));
+        int maxSupportedVersionInt = versionStringToInt(supportedVersions.get(supportedVersions.size() - 1));
 
         if (minecraftVersionInt < minSupportedVersionInt) {
-            getLogger().severe("Your server's version is older than CrashClaim's minimum supported version, which is " + supportedVersions.getFirst() +
+            getLogger().severe("Your server's version is older than CrashClaim's minimum supported version, which is " + supportedVersions.get(0) +
                     ". The plugin will not attempt loading. Your server is currently running version " + minecraftVersion + ".");
             return false;
         } else if (minecraftVersionInt > maxSupportedVersionInt) {
-            getLogger().warning("Your server's version is newer than CrashClaim's maximum supported version, which is " + supportedVersions.getLast() +
+            getLogger().warning("Your server's version is newer than CrashClaim's maximum supported version, which is " + supportedVersions.get(supportedVersions.size() - 1) +
                     ". The plugin will still attempt to load, but issues may arise. " +
                     "Please check if the plugin has newer versions available. Your server is currently running version " + minecraftVersion + ".");
         }
@@ -230,7 +230,11 @@ public class CrashClaim extends JavaPlugin {
     }
 
     private int versionStringToInt(String version) {
-        return Integer.parseInt(version.replace(".", ""));
+        String[] parts = version.split("\\.");
+        int major = Integer.parseInt(parts[0]);
+        int minor = parts.length > 1 ? Integer.parseInt(parts[1]) : 0;
+        int patch = parts.length > 2 ? Integer.parseInt(parts[2]) : 0;
+        return major * 10000 + minor * 100 + patch;
     }
 
     public void disablePlugin(String error){
